@@ -26,21 +26,40 @@ repositories {
 dependencies {
     implementation(project(":common"))
 
+    implementation(Libraries.springbootWeb)
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation(Libraries.springbootValidation)
+
+    runtimeOnly("org.postgresql:postgresql:42.7.2")
+
     compileOnly(Libraries.lombok)
     annotationProcessor(Libraries.lombok)
+    annotationProcessor(Libraries.mapStructProcessor)
+    implementation(Libraries.mapStruct)
 
     implementation(Libraries.springboot)
+    implementation(Libraries.swagger)
 
-    testImplementation(Testing.springWebflux)
-    testImplementation(Testing.springbootStarter)
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.0")
 
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude(group = "org.junit.vintage", module = "junit-vintage-engine")
+    }
+    testImplementation("org.mockito:mockito-core")
+    testImplementation("com.jayway.jsonpath:json-path")
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
     testRuntimeOnly(Testing.junit)
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
 
 tasks.withType<JavaCompile> {
     options.compilerArgs.add("--enable-preview")
+}
+
+springBoot {
+    mainClass.set("com.globant.apigateway.ApiGatewayApplication")
 }
